feat(leetcode/java/InvertBinaryTree226): pass